dev/tests/cases/neg/24_return_type.tv
df f() -> str { return 5; }
df main() -> void {
    echo!(f());
}
